# cwru_davinci_simulation

./: .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
config/: psm_controller_config.yaml
cwru_davinci_gazebo/: CMakeLists.txt  README.md  frame_notes  package.xml
cwru_davinci_gazebo/launch/: davinci_control_both.launch  davinci_yellow_config.launch  sticky_davinci_gazebo.launch
cwru_davinci_gazebo/model/: both_psms_sticky.urdf.xacro  both_psms_sticky_yellow_config.urdf.xacro  gazebo_psm.base.urdf.xacro  gazebo_psm_sticky.tool.sca.urdf.xacro  psm_sticky.urdf.xacro
cwru_davinci_gazebo/props/1mm_cube/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/blue_marker/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/green_marker/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/needle/: model.config  model.sdf
cwru_davinci_gazebo/props/needle_r/: model.config  model.sdf
cwru_davinci_gazebo/props/needle_r/mesh/: needle_r3.dae  needle_r4.dae
cwru_davinci_gazebo/props/needle_rob/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/red_marker/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/small_green_marker/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/small_tissue/: model-1_4.sdf  model.config
cwru_davinci_gazebo/props/small_tissue/materials/scripts/: tissue.material
cwru_davinci_gazebo/props/tiny_red_marker/: model-1_4.sdf  model.config
cwru_davinci_gazebo/src/: davinci_to_sim.cpp  sim_to_davinci.cpp
cwru_davinci_gazebo/world/: sticky_davinci.world
cwru_davinci_sim_examples/: CMakeLists.txt  package.xml
cwru_davinci_sim_examples/launch/: davinci_with_model.launch
launch/: cal_configuration.launch  lab_configuration.launch  spawn_camera.launch  spawn_psm.launch
world/: empty.world
